--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,12 +1,33 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic Blank
+      Sistema de Contatos
     </ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content padding>
-  The world is your oyster.
-  <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs">docs</a> will be your guide.</p>
+  <ion-grid>
+    <ion-row justify-content-center>
+      <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
+        
+        <ion-card margin-top class="max420" margin-top>
+          <ion-card-title text-center><h4>Login</h4></ion-card-title>
+          <ion-card-content>
+              <ion-item>
+                  <ion-input [(ngModel)]="usuario" placeholder="Username"></ion-input>
+              </ion-item>
+              <ion-item>
+                  <ion-input [(ngModel)]="senha" type="password" placeholder="Password"></ion-input>
+              </ion-item>
+              <!-- <ion-item>
+                  <ion-label *ngIf="data.token" text-wrap>{{data.token}}</ion-label>
+              </ion-item> -->
+              <ion-button size="large" expand="full" (click)="login()" >Login</ion-button>
+          </ion-card-content>
+        </ion-card>  
+        
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
